<resources>
    <string name="app_name">PTITFOOD</string>
    <string name="detail_text">Shop Food PTIT</string>
    <string name="welcome">Chào mừng các bạn đến với shop food PTIT</string>
    <string name="welcome_start">Shop food PTIT xin chân thành cảm ơn quý khách đã sử dụng dịch vụ của chúng tôi</string>

    <!--    Splash screen-->
    <string name="next_view">Tiếp theo</string>

    <!--    Login-->
    <string name="name_shop">PTIT FOOD</string>
    <string name="login_user">Đăng nhập tài khoản</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="username_error">Tài khoản không hợp lệ hoặc không tồn tại</string>

    <!--    Sign up-->
    <string name="sign_up_user">Đăng ký tài khoản</string>
    <string name="sign_up_google">Google</string>
    <string name="sign_up_facebook">Facebook</string>
    <string name="username_error_signUP">Email không hợp lệ</string>
    <string name="password_error_signUP">Mật khẩu phải nhiều hơn 5 ký tự</string>



    <!--    Menu-->
    <string name="home">Trang chủ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="history">Nhật ký</string>
    <string name="profile">Thông tin</string>

    <!--    Forgot Password-->
    <string name="enter_email">Nhập email</string>
    <string name="forgot_pass">Quên mật khẩu</string>
    <string name="send_code">Gửi mã xác nhận</string>
    <string name="reset_password">Vui lòng check mail để tiến hành reset password nhầm tăng cường tính bảo mật của tài khoản</string>
    <string name="reset_password_completed">Hoàn thành</string>

    <!--    Confrim OTP-->
    <string name="confirm_otp">Xác thực OTP</string>
    <string name="content_otp">Vui lòng nhập mã OTP vừa gửi tới email của bạn</string>
    <string name="enter_otp">Nhập mã xác nhận</string>
    <string name="click_confirm">Xác nhận</string>

    <!--    New Password-->
    <string name="new_password">Nhập lại mật khẩu mới</string>
    <string name="enter_password">Nhập mật khẩu mới</string>
    <string name="enter_confirm_password">Xác thực lại mật khẩu</string>

    <!--    Header and footer-->
    <string name="header_text">PTIT FOOD kính chào quý khách !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Home-->
    <string name="home_popular">Phổ biến</string>
    <string name="home_view_menu">Xem thêm</string>

    <!--    Search-->
    <string name="search_hint">Món ăn yêu thích ?</string>
    <string name="search_fast_food">Thức ăn nhanh</string>

    <!--    Food detail-->
    <string name="food_detail_name">Food Name</string>
    <string name="food_detail">Mô tả</string>
    <string name="food_decription">Hamburger là một loại thức ăn bao gồm bánh mì kẹp thịt xay ở giữa. Miếng thịt có thể được nướng, chiên, hun khói hay nướng trên lửa.</string>
    <string name="food_topping">Ăn thêm</string>
    <string name="food_note">Ghi chú</string>
    <string name="food_btn_add_cart">Thêm vào giỏ hàng</string>

    <!--    Cart-->
    <string name="cart_name">Giỏ hàng</string>
    <string name="cart_food_add">Đồ ăn thêm :</string>
    <string name="cart_price">Giá :</string>
    <string name="cart_total">Tổng tiền</string>
    <string name="cart_price_ship">Vận chuyển</string>
    <string name="cart_voucher">Phiếu giảm giá</string>
    <string name="cart_subtotal">Thành tiền</string>
    <string name="cart_confirm">Xác nhận</string>

    <!--    Payment-->
    <string name="payment_edit">Chỉnh sửa</string>
    <string name="payment_name">Họ tên</string>
    <string name="payment_address">Địa chỉ</string>
    <string name="payment_phone">Số điện thoại</string>
    <string name="payment_total">Thành tiền</string>
    <string name="payment_note">Lưu ý: Thanh toán khi nhận hàng</string>
    <string name="payment_accept">Xác nhận</string>

    <!--    Profile-->
    <string name="profile_email">Email</string>
    <string name="profile_address">Địa chỉ</string>
    <string name="profile_name">Họ tên</string>
    <string name="profile_phone_number">SĐT</string>
    <string name="profile_password">Mật khẩu</string>
    <string name="profile_save_info_customer">Lưu thông tin</string>
    <string name="profile_logout">Đăng xuất</string>

    <!--    History-->
    <string name="history_order">Đơn hàng: </string>
    <string name="history_topping">Đồ ăn thêm: </string>
    <string name="history_number">Số lượng: </string>
    <string name="history_status">Đang giao</string>
    <string name="history_name_shop">PTIT FOOD</string>
    <string name="history_phone_number">SĐT: 0707427559</string>
    <string name="history_address">Địa chỉ: Man Thiện, Thủ Đức, TP.HCM</string>
    <string name="history_buy_again">Mua lại</string>
    <string name="history_take_care">CHĂM SÓC KHÁCH HÀNG</string>

    <!--    Notification-->
    <string name="title_notification">Thông báo</string>

    <!--    Confirm Order-->
    <string name="confirm_order">Xác nhận đơn hàng thành công!</string>

    <string name="firebase_database_url" translatable="false">https://123.firebaseio.com</string>
    <string name="gcm_defaultSenderId" translatable="false">123</string>
    <string name="google_api_key" translatable="false">123</string>
    <string name="google_app_id" translatable="false">123</string>
    <string name="default_web_client_id">365469232378-ekhevphfje3je5pil41kbmfqjpujc2cm.apps.googleusercontent.com</string>


    <string name="facebook_app_id">424489293429836</string>
    <string name="fb_login_protocol_scheme">8697d2a4777d54029fac07dfb9dbb4fb</string>
    <string name="facebook_client_token">z4uTEDIM/w0FqRLB34QZCz3GY/0=</string>


</resources>