<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item android:title="@string/cart"
        android:id="@+id/cart_fragment"
        android:icon="@drawable/ic_baseline_shopping_cart_24"/>
    <item android:title="@string/search"
        android:id="@+id/search_fragment"
        android:icon="@drawable/ic_baseline_search_24"/>
    <item android:title="@string/history"
        android:id="@+id/history_fragment"
        android:icon="@drawable/ic_baseline_history_24"/>
    <item android:title="@string/profile"
        android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_baseline_person_24"/>
</menu>