<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginUserActivity">

    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_shop"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/tv_name_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/name_shop"
        android:textColor="#BE1515"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_logo_login"
        app:layout_constraintStart_toStartOf="@+id/img_logo_login"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_login"></TextView>

    <TextView
        android:id="@+id/tv_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/new_password"
        android:textColor="#A61128"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_name_shop"
        app:layout_constraintStart_toStartOf="@+id/tv_name_shop"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_shop"></TextView>

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/enter_password"
        android:background="@drawable/custom_edt_login"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:elevation="1dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_password"
        app:layout_constraintStart_toStartOf="@+id/tv_new_password"
        app:layout_constraintEnd_toEndOf="@+id/tv_new_password"/>

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/enter_confirm_password"
        android:background="@drawable/custom_edt_login"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:elevation="1dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_new_password"
        app:layout_constraintStart_toStartOf="@+id/edt_new_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_new_password"/>


    <Button
        android:id="@+id/btn_confirm_password"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:elevation="5dp"
        android:text="@string/click_confirm"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/custom_btn_login"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/edt_confirm_password">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>