<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FoodDetailActivity">

    <ImageButton
        android:id="@+id/btn_food_detail_out"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/food_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/food_detail_name"
        android:textColor="#CD2E2F"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_food_detail_out" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:foregroundGravity="center"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name_detail">

        <ImageView
            android:id="@+id/food_image_detail"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/pic_food_hamburger" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_string_food_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/food_detail"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/food_decription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/food_decription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_string_food_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_string_food_detail" />

    <TextView
        android:id="@+id/tv_string_topping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/food_topping"
        android:textColor="#00963F"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/food_decription"
        app:layout_constraintTop_toBottomOf="@+id/food_decription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_recycler_view"
        android:layout_width="0dp"
        android:layout_height="137dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_string_topping"
        app:layout_constraintTop_toBottomOf="@+id/tv_string_topping" />

    <TextView
        android:id="@+id/tv_string_food_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/food_note"
        android:textColor="#E62F2F"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/detail_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/detail_recycler_view" />

    <EditText
        android:id="@+id/food_note"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:gravity="top"
        android:hint="Add a note"
        android:inputType="textMultiLine"
        android:textColorHint="#676767"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_string_food_note"
        app:layout_constraintTop_toBottomOf="@+id/tv_string_food_note" />

    <Button
        android:id="@+id/btn_add_to_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_btn_add_cart"
        android:text="@string/food_btn_add_cart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>